# scuttle-db

./: .gitignore  AGENTS.md  Cargo.toml  README.md  rustfmt.toml
src/: btree.rs  buffer_manager.rs  buffer_pool.rs  database.rs  error.rs  keyword.rs  lexer.rs  lib.rs  logical_planner.rs  main.rs  page.rs  parser.rs  physical_planner.rs  planner_context.rs  predicate_evaluator.rs  system_catalog.rs  table.rs
src/catalog/: mod.rs  system_catalog.rs
src/common/: error.rs
src/core/: mod.rs  serialization.rs  types.rs
src/db/: database.rs  mod.rs  null_bitmap.rs  table.rs
src/db/catalog/: system_catalog.rs
src/db/table/: column_def.rs  mod.rs  row.rs  schema.rs  table_def.rs
src/sql/: analyze.rs  analyzer.rs  catalog_context.rs  infer_type.rs  lexer.rs  logical_planner.rs  mod.rs  parser.rs  physical_planner.rs  planner_context.rs  predicate_evaluator.rs
src/sql/analyzer/: mod.rs  schema.rs
src/sql/ast/: expression.rs  mod.rs  operator.rs  predicate.rs  statement.rs  target.rs
src/sql/evaluator/: expression.rs  mod.rs  predicate.rs
src/sql/parser/: keyword.rs  literal.rs  literal_value.rs  mod.rs  operators.rs
src/sql/parser/ast/: expression.rs  mod.rs  statement.rs  target.rs
src/sql/parser/ast/expression/: is_predicate.rs  mod.rs
src/sql/planner/: logical.rs  physical.rs
src/storage/: btree.rs  buffer_pool.rs  mod.rs  page.rs
