[package]
name = "scuttle-db"
version = "0.1.0"
edition = "2024"
authors = ["Douglas Rocha"]
description = "A learning project: building a relational database from scratch in Rust"
readme = "README.md"
license = "MIT"
keywords = ["database", "sql", "learning"]
categories = ["database-implementations", "development-tools"]

[dependencies]
miette = { version = "7.6.0", features = ["fancy"] }
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0.18"

# Enable documentation features
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
